Viewport CSS rules should not clamp values like Viewport META https://bugs.webkit.org/show_bug.cgi?id=103068

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-11-26
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

CSS Device Adaption does not clamp the length and zoom values the
same way as the Viewport META. In fact, they are not clamped at all,
but instead, we just make sure that length values are at least 1px.

Tests: css3/device-adapt/opera/constrain-018.xhtml
       css3/device-adapt/opera/constrain-019.xhtml
       css3/device-adapt/opera/constrain-023.xhtml
       css3/device-adapt/opera/constrain-024.xhtml

* dom/ViewportArguments.cpp:
(WebCore::ViewportArguments::resolve):

LayoutTests:

Imported Opera tests that makes sure we are doing the clamping right.

* css3/device-adapt/opera/constrain-018-expected.txt: Added.
* css3/device-adapt/opera/constrain-018.xhtml: Added.
* css3/device-adapt/opera/constrain-019-expected.txt: Added.
* css3/device-adapt/opera/constrain-019.xhtml: Added.
* css3/device-adapt/opera/constrain-023-expected.txt: Added.
* css3/device-adapt/opera/constrain-023.xhtml: Added.
* css3/device-adapt/opera/constrain-024-expected.txt: Added.
* css3/device-adapt/opera/constrain-024.xhtml: Added.

Canonical link: https://commits.webkit.org/121388@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135728 268f45cc-cd09-0410-ab3c-d52691b4dbfc